# kmp-ai

./: .gitignore  .gitmodules  Package.swift  README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
gradle/: libs.versions.toml  publishing.gradle.kts
llm/: build-android.gradle  build-android.gradle.kts  build-ios.gradle  build.gradle.kts
llm-catalog-deepseek/: build-android.gradle  build.gradle.kts
llm-catalog-deepseek/src/commonMain/kotlin/io/github/fadizg/kmpai/catalog/: DeepSeek.kt
llm-catalog-gemma/: build-android.gradle  build.gradle.kts
llm-catalog-gemma/src/commonMain/kotlin/io/github/fadizg/kmpai/catalog/: Gemma.kt
llm-catalog-qwen/: build-android.gradle  build.gradle.kts
llm-catalog-qwen/src/commonMain/kotlin/io/github/fadizg/kmpai/catalog/: Qwen.kt
llm/src/androidMain/: AndroidManifest.xml
llm/src/androidMain/cpp/: CMakeLists.txt  llama_jni.cpp
llm/src/androidMain/kotlin/io/github/fadizg/kmpai/llm/: AndroidLlamaCppEngine.kt  AndroidModelCache.kt  KmpAiInitializer.kt  (+5 more)
llm/src/iosMain/cinterop/: llama.def
samples/android/: build.gradle.kts
samples/android/src/main/: AndroidManifest.xml
samples/android/src/main/res/values/: themes.xml
samples/app/: build-android.gradle  build.gradle.kts
samples/app/iosApp/: .gitignore  README.md  project.yml  setup.sh
samples/app/iosApp/iosApp/: ContentView.swift
samples/app/src/androidMain/: AndroidManifest.xml
samples/jvm/: build.gradle.kts
scripts/: release-spm.sh  setup-release.sh
spm/KmpAIWrapper/: KmpAIWrapper.swift
(+45 files in other folders)
